libmongocrypt (1.7.1-3) UNRELEASED; urgency=medium

  * Drop remove-builtin.patch, integrated upstream

 -- Kyle Kloberdanz <kyle.kloberdanz@mongodb.com>  Fri, 10 Feb 2023 09:33:24 -0600

libmongocrypt (1.7.1-2) unstable; urgency=medium

  * Remove builtin which causes 32-bit ARM builds to fail

 -- Kyle Kloberdanz <kyle.kloberdanz@mongodb.com>  Fri, 03 Feb 2023 16:24:00 -0600

libmongocrypt (1.7.1-1) unstable; urgency=medium

  [ Roberto C. Sanchez ]
  * Add libintelrdfpmath-dev to Build-Depends rather than using embedded
    sources.

  [ Kyle Kloberdanz ]
  * New upstream release.
  * Add myself to uploaders.
  * Update to Standards-Version 4.6.2 (no changes)

 -- Kyle Kloberdanz <kyle.kloberdanz@mongodb.com>  Fri, 03 Feb 2023 13:25:46 -0600

libmongocrypt (1.6.2-1) unstable; urgency=medium

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 06 Dec 2022 23:50:00 -0500

libmongocrypt (1.6.0-1) unstable; urgency=medium

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Wed, 07 Sep 2022 20:54:40 -0400

libmongocrypt (1.5.2-1) unstable; urgency=medium

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Sat, 30 Jul 2022 11:07:08 -0400

libmongocrypt (1.5.0-1) unstable; urgency=medium

  * New upstream release.
  * Update to Standards-Version 4.6.1 (no changes)

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 28 Jun 2022 16:05:33 -0400

libmongocrypt (1.4.0-1) unstable; urgency=medium

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Mon, 18 Apr 2022 18:46:10 -0400

libmongocrypt (1.3.1-1) unstable; urgency=medium

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Wed, 02 Mar 2022 14:05:42 -0500

libmongocrypt (1.3.0-1) unstable; urgency=medium

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Thu, 04 Nov 2021 17:38:47 -0400

libmongocrypt (1.2.2-1) unstable; urgency=medium

  * New upstream release.